# HLASM_parser

./: .gitignore  README.md  pyproject.toml
hlasm_parser/: __init__.py  __main__.py  cli.py  models.py
hlasm_parser/chunker/: __init__.py  chunker.py
hlasm_parser/output/: __init__.py  cfg_builder.py
hlasm_parser/parser/: __init__.py  instruction_parser.py
hlasm_parser/passes/: __init__.py  copybook_processor.py  discard_after_72.py  label_block.py  line_continuation.py  macro_expansion.py  sanitise.py
hlasm_parser/pipeline/: __init__.py  dependency_map.py  extract_blocks.py  hlasm_analysis.py  light_parser.py  mnemonics.py
outputs/chunks/: DEDUCTNS.json  DEDUCTNS.txt  EXTPROG1.json  EXTPROG1.txt  EXTPROG1_recursive.json  EXTPROG1_recursive.txt  EXTPROG2.json  EXTPROG2.txt  EXTPROG3.json  EXTPROG3.txt  PAYROLL.json  PAYROLL.txt  PAYROLL_recursive.json  PAYROLL_recursive.txt  RPTWRITE.json  RPTWRITE.txt  TAXCALC.json  TAXCALC.txt  external_calls.json  external_calls.txt  go_in_inline.json  go_in_inline.txt  long_lines.json  long_lines.txt  sample.json  sample.txt  sample_dsect.json  sample_dsect.txt  sample_with_macros.json  sample_with_macros.txt
scripts/: export_cfg.py  export_chunks.py
tests/: full_suite_results.txt  payroll_suite_results.txt  test_chunker.py  test_copybook.py  test_go_in.py  test_integration.py  test_light_parser.py  test_parser.py  test_passes.py  test_payroll_suite.py  test_pipeline.py
tests/fixtures/: external_calls.hlasm  go_in_inline.hlasm  long_lines.hlasm  payroll.hlasm  sample.hlasm  sample_dsect.hlasm  sample_with_macros.hlasm
(+135 files in other folders)
